bk_ida/gccida/g3/df_ref_record
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1326:69: error: must use 'enum' tag to refer to type 'df_ref_type'
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                                    ^
                                                                    enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1326:91: error: must use 'enum' tag to refer to type 'df_ref_flags'
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                                                          ^
                                                                                          enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1351:4: error: expected ';' after expression
rtx v33; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1351:5: error: use of undeclared identifier 'v33'
rtx v33; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1370:4: error: expected ';' after expression
rtx insna; // [rsp+8h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1370:5: error: use of undeclared identifier 'insna'; did you mean 'insn'?
rtx insna; // [rsp+8h] [rbp-50h] BYREF 
    ^~~~~
    insn
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1326:63: note: 'insn' declared here
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1372:4: error: expected ';' after expression
rtx v54; // [rsp+18h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1372:5: error: use of undeclared identifier 'v54'
rtx v54; // [rsp+18h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1375:1: error: use of undeclared identifier 'insna'; did you mean 'insn'?
insna = insn; 
^~~~~
insn
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1326:63: note: 'insn' declared here
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1383:33: error: invalid suffix 'xmode' on integer constant
if ( v44 < mode_size[*(short *)0xmode] || v44 >= mode_size[*( ( unsigned __int8 *)rtx + 2)] ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1385:14: error: expected expression
loc = ( rtx *)reg->fld; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1423:39: error: use of undeclared identifier 'insna'; did you mean 'insn'?
v23 = _mm_loadh_ps( ( const double *)&insna); 
                                      ^~~~~
                                      insn
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1326:63: note: 'insn' declared here
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1423:5: error: assigning to '__m128' (vector of 4 'float' values) from incompatible type 'int'
v23 = _mm_loadh_ps( ( const double *)&insna); 
    ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1472:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v14) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1496:1: error: use of undeclared identifier 'v33'
v33 = gen_rtx_REG( reg_raw_mode[i], i); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1500:1: error: use of undeclared identifier 'v54'
v54 = v33; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1500:7: error: use of undeclared identifier 'v33'
v54 = v33; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1526:39: error: use of undeclared identifier 'insna'; did you mean 'insn'?
v29 = _mm_loadh_ps( ( const double *)&insna); 
                                      ^~~~~
                                      insn
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1326:63: note: 'insn' declared here
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/df.c:1526:5: error: assigning to '__m128' (vector of 4 'float' values) from incompatible type 'int'
v29 = _mm_loadh_ps( ( const double *)&insna); 
    ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/df_ref_record/src/obj/df.o] Error 1
